--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <title>This is our website</title>
 <h1> Life </h1>
 <p> I love my kids </p>
+<p> To learn coding you have to learn alogorithm <p/>
 </html>
