--- a/index2.html
+++ b/index2.html
@@ -3,5 +3,5 @@
 <h1> Life </h1>
 <p> I love my kids </p>
 <p> Live curious <p/>
-<p> To learn conding you have to learn algorithm <p/>
+<p> To learn coding you have to learn algorithm <p/>
 </html>
