--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 <title>This is our website</title>
 <h1> --*Life* </h1>
 <p> I love my kids </p>
+<p> for coding you have to understand algorithm <p/>
+<p> network patch <p/>
 </html>
